--- a/index.html
+++ b/index.html
@@ -1,70 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="style.css">
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+        <link rel="stylesheet" href="style.css"/>
         <title>Application Form</title>
     </head>
     <body>
-        <!--header-->
-        <header>
-            <div id="maintitle">
-                <h1>Let's talk</h1>
-                <p>Think you have what it takes? Show us.</p>
-            </div>
-        </header>
-        <!--main body-->
         <div class="container">
+            <!--header-->
+            <header>
+                <div id="maintitle">
+                    <h1>Let's talk</h1>
+                    <p>Think you have what it takes? Show us.</p>
+                </div>
+            </header>
             <!--section 1-->
-            <div class="sectiontitle">
+            <div class="sectiontitle fulline">
                 1. Personal Information
             </div>
-            <div class="line">
-                <input class="sizethree" type="text" name="fullName" placeholder="Full name*"/>
-                <input class="sizeone" type="text" name="phone" placeholder="Phone*"/>
-            </div>
-            <div class="line">
-                <input class="sizethree" type="text" name="email" placeholder="Email*"/>
-            </div>
-            <div class="line">
-                <input class="sizethree" type="text" name="re-enterEmail" placeholder="Re-enter email*"/>
-            </div>
-            <div class="line">
-                <input class="sizefour highline" type="text" name="address" placeholder="Address*"/>
-            </div>
-            <div class="line">
-                <input class="sizefour" type="text" name="address2"/>
-            </div>
-            <div class="line">
-                <input class="sizeone" type="text" name="city" placeholder="City*"/>
-                <input class="sizeone" type="text" name="state" placeholder="State"/>
-                <input class="sizeone" type="text" name="country" placeholder="Country/Region*"/>
-                <input class="sizeone" type="text" name="zip" placeholder="Zip/Postal code"/>
-            </div>
-            <div class="line">
-                <input class="sizefour highline" type="text" name="hearAboutUs" placeholder="How did you hear about us"/>
-            </div>
-        </div>
-        <!--section 2-->
-        <div id="skills">
-            <div class="sectiontitle">
-                2. Skills and location
+            <div id="inputone">
+                <input class="sizefour" type="text" name="fullName" placeholder="Full name*"/>
+                <input class="sizefour" type="text" name="email" placeholder="Email*"/>
+                <input class="sizefour" type="text" name="re-enterEmail" placeholder="Re-enter email*"/>
             </div>
             <div>
-                <p class="highline">Which is your primary design discipline?*</p>
-                <div class="box">
-                    <input class="sizeone" type="radio" name="discipline" id="radiodesignResearch" value="designResearch"/>
-                    <label for="radiodesignResearch">Design Research</label>
-                    <input class="sizeone" type="radio" name="discipline" id="radiovisualDesign" value="visualDesign"/>
-                    <label for="radiovisualDesign">Visual Design</label> 
-                    <input class="sizeone" type="radio" name="discipline" id="radiouxDesign" value="uxDesign"/>
-                    <label for="radiouxDesign">UX Design</label> 
-                    <input class="sizeone" type="radio" name="discipline" id="radiofrontEndDev" value="frontEndDev"/>
-                    <label for="radiofrontEndDev">Front-end Dev</label> 
-                </div>
+                <input class="sizefour" type="text" name="phone" placeholder="Phone*"/>
             </div>
-            <div class="box">
+
+            <div class="fulline">
+                <input class="sizefour highline" type="text" name="address" placeholder="Address*"/>
+                <input class="sizefour" type="text" name="address2"/>
+            </div>
+            <div id="smallone">
+                <input class="sizefour" type="text" name="city" placeholder="City*"/>
+            </div>
+            <div id="smalltwo">
+                <input class="sizefour" type="text" name="state" placeholder="State"/>
+            </div>
+            <div id="smallthree">
+                <input class="sizefour" type="text" name="country" placeholder="Country/Region*"/>
+            </div>
+            <div id="smallfour">
+                <input class="sizefour" type="text" name="zip" placeholder="Zip/Postal code"/>
+            </div>
+            <div id="howdidyou" class="fulline">
+                <input class="sizefour highline" type="text" name="hearAboutUs" placeholder="How did you hear about us"/>
+            </div>
+            <!--section 2-->
+            <div id="skilltitle" class="sectiontitle fulline">
+                2. Skills and location
+            </div>
+            <div class="fulline">
+                <p class="highline fulline">Which is your primary design discipline?*</p>
+            </div>
+            <input type="radio" name="discipline" id="radiodesignResearch" value="designResearch"/>
+            <label id="labelone" class="sizefour" for="radiodesignResearch">Design Research</label>
+            <input type="radio" name="discipline" id="radiovisualDesign" value="visualDesign"/>
+            <label id="labeltwo" for="radiovisualDesign">Visual Design</label> 
+            <input type="radio" name="discipline" id="radiouxDesign" value="uxDesign"/>
+            <label id="labelthree" for="radiouxDesign">UX Design</label> 
+            <input type="radio" name="discipline" id="radiofrontEndDev" value="frontEndDev"/>
+            <label id="labelfour" for="radiofrontEndDev">Front-end Dev</label> 
+            <div class="box fulline">
                 <div class="smallbox">
                     <p>Do you have experience with any other disciplines?</p>
                     <div class="checkboxholder">
@@ -117,25 +115,23 @@
                     </div>                     
                 </div>
             </div>
-        </div>
-        <!--section 3-->
-        <div id="portfolio">
-            <div class="sectiontitle">
-                3. Portfolio
+            <!--section 3-->
+            <div id="sectionthree" class="fulline">
+                <div class="sectiontitle">
+                    3. Portfolio
+                </div>
+                <div class="fulline">
+                    <p class="highline">Prove you're IBM next great designer by showing us who you are. What you've done. How you think. Tell us your story.</p>
+                </div>
+                <div class="fulline">
+                    <input class="sizefour highline" type="text" name="portfolio" placeholder="Portfolio link*"/>
+                </div>
+                <textarea class="fulline" rows="6" placeholder="Anything else (another link, availability, etc.)?"></textarea>
+            </div> 
+            <!--section 4 - Submit-->
+            <div id="buttondiv">
+                <button id="submitButton" class="pointer">Submit</button>
             </div>
-            <div class="line">
-                <p class="highline">Prove you're IBM next great designer by showing us who you are. What you've done. How you think. Tell us your story.</p>
-            </div>
-            <div class="line">
-                <input class="sizefour highline" type="text" name="portfolio" placeholder="Portfolio link*"/>
-            </div>
-            <div class="line">
-                <textarea rows="6" cols="500" placeholder="Anything else (another link, availability, etc.)?"></textarea>
-            </div>
-        </div> 
-        <!--section 4 - Submit-->
-        <div id="buttondiv">
-            <button id="submitButton" class="pointer">Submit</button>   
         </div>
     </body>
 </html>
