--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="stylesheet" href="style.css"/>
         <title>Application Form</title>
     </head>
     <body>
-        <div class="container">
+        <form class="container">
             <!--header-->
             <header>
                 <div id="maintitle">
@@ -20,26 +20,26 @@
                 1. Personal Information
             </div>
             <div id="inputone">
-                <input class="sizefour" type="text" name="fullName" placeholder="Full name*"/>
-                <input class="sizefour" type="text" name="email" placeholder="Email*"/>
-                <input class="sizefour" type="text" name="re-enterEmail" placeholder="Re-enter email*"/>
+                <input class="sizefour" type="text" name="fullName" placeholder="Full name*" required pattern="[a-zA-Z\s]+"/>
+                <input class="sizefour" type="email" name="email" placeholder="Email*" required/>
+                <input class="sizefour" type="email" name="re-enterEmail" placeholder="Re-enter email*" required/>
             </div>
             <div>
-                <input class="sizefour" type="text" name="phone" placeholder="Phone*"/>
+                <input class="sizefour" type="number" name="phone" placeholder="Phone*" required/>
             </div>
 
             <div class="fulline">
-                <input class="sizefour highline" type="text" name="address" placeholder="Address*"/>
+                <input class="sizefour highline" type="text" name="address" placeholder="Address*" required/>
                 <input class="sizefour" type="text" name="address2"/>
             </div>
             <div id="smallone">
-                <input class="sizefour" type="text" name="city" placeholder="City*"/>
+                <input class="sizefour" type="text" name="city" placeholder="City*" required pattern="[a-zA-Z]+"/>
             </div>
             <div id="smalltwo">
-                <input class="sizefour" type="text" name="state" placeholder="State"/>
+                <input class="sizefour" type="text" name="state" placeholder="State" pattern="[a-zA-Z]+"/>
             </div>
             <div id="smallthree">
-                <input class="sizefour" type="text" name="country" placeholder="Country/Region*"/>
+                <input class="sizefour" type="text" name="country" placeholder="Country/Region*" required pattern="[a-zA-Z]+"/>
             </div>
             <div id="smallfour">
                 <input class="sizefour" type="text" name="zip" placeholder="Zip/Postal code"/>
@@ -124,14 +124,14 @@
                     <p class="highline">Prove you're IBM next great designer by showing us who you are. What you've done. How you think. Tell us your story.</p>
                 </div>
                 <div class="fulline">
-                    <input class="sizefour highline" type="text" name="portfolio" placeholder="Portfolio link*"/>
+                    <input class="sizefour highline" type="url" name="portfolio" placeholder="Portfolio link*" required />
                 </div>
                 <textarea class="fulline" rows="6" placeholder="Anything else (another link, availability, etc.)?"></textarea>
             </div> 
             <!--section 4 - Submit-->
             <div id="buttondiv">
-                <button id="submitButton" class="pointer">Submit</button>
+                <button id="submitButton" type="submit" value="submit" class="pointer submit">Submit</button>
             </div>
-        </div>
+        </form>
     </body>
 </html>
