--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Application Form</title>
     </head>
     <body>
-        <div class="container">
+        <form class="container">
             <!--header-->
             <header>
                 <div id="maintitle">
@@ -132,6 +132,6 @@
             <div id="buttondiv">
                 <button id="submitButton" class="pointer">Submit</button>
             </div>
-        </div>
+        </form>
     </body>
 </html>
